RESOLVED FIXED48724
[Qt] QWKPage::loadFinished is not emitted if document.open() is invoked on a new window
https://bugs.webkit.org/show_bug.cgi?id=48724
Summary [Qt] QWKPage::loadFinished is not emitted if document.open() is invoked on a ...
Kimmo Kinnunen
Reported 2010-10-31 04:13:20 PDT
Created attachment 72452 [details] test-case QWKPage::loadFinished is not emitted if document.open() is invoked on a new window. Steps to reproduce: 1) open new window with js 2) use document.write or document.open on the new window doc 3) call document.close Expected: QWKPage::loadFinished emitted Result: QWKPage::loadFinished not emitted Can be observed with MiniBrowser. MiniBrowser Stop -button remains active even if the page load has finished. See attached test-case.
Attachments
test-case (679 bytes, text/html)
2010-10-31 04:13 PDT, Kimmo Kinnunen
no flags
fix hanging UI state (2.79 KB, patch)
2010-11-26 08:23 PST, alan
no flags
alan
Comment 1 2010-11-26 08:23:00 PST
Created attachment 74941 [details] fix hanging UI state the root cause is tracked here: https://bugs.webkit.org/show_bug.cgi?id=50106
WebKit Commit Bot
Comment 2 2010-12-14 03:48:34 PST
Comment on attachment 74941 [details] fix hanging UI state Clearing flags on attachment: 74941 Committed r74013: <http://trac.webkit.org/changeset/74013>
WebKit Commit Bot
Comment 3 2010-12-14 03:48:39 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2010-12-14 04:18:58 PST
http://trac.webkit.org/changeset/74013 might have broken Qt Linux Release The following tests are not passing: inspector/styles-source-offsets.html
Note You need to log in before you can comment on or make changes to this bug.