2010-12-14  Zalan Bujtas  <zbujtas@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Add loadFinished() for provisional load error
        This fixes the hanging UI state, when provisional load error occurs due to
        the async nature of policy check.

        https://bugs.webkit.org/show_bug.cgi?id=48724

        * UIProcess/API/qt/ClientImpl.cpp:
        (loadFinished):
        (qt_wk_didFailProvisionalLoadWithErrorForFrame):
        (qt_wk_didFinishLoadForFrame):
        (qt_wk_didFailLoadWithErrorForFrame):

Canonical link: https://commits.webkit.org/64362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74013 268f45cc-cd09-0410-ab3c-d52691b4dbfc